welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: not found: value a
  a(n+1)=1+a(n+1-a(a(n)))
  ^golomb:2: error: not found: value n
  a(n+1)=1+a(n+1-a(a(n)))
    ^golomb:2: error: not found: value a
  a(n+1)=1+a(n+1-a(a(n)))
           ^golomb:2: error: not found: value n
  a(n+1)=1+a(n+1-a(a(n)))
             ^golomb:2: error: not found: value a
  a(n+1)=1+a(n+1-a(a(n)))
                 ^golomb:2: error: not found: value a
  a(n+1)=1+a(n+1-a(a(n)))
                   ^golomb:2: error: not found: value n
  a(n+1)=1+a(n+1-a(a(n)))
                     ^