welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  a(n+1)=1+a(n+1-a(a(n)))
  var T = new Array[Int](num);
  var nombre = 2;
  var a_prendre = 3;
  var occurences=0;
  var nombres_occurences = 1;
  T(0)=1;
  return 1
  for (i <- 1 to num-1){
  T(i)=nombre;
  occurences=occurences+1; 
    if (occurences==nombres_occurences){
    														 occurences = 0;
                                                                                                														nombre = a_prendre;
                                                                                                														a_prendre = a_prendre+1; 		
                                                                                                														nombres_occurences = T(a_prendre+1)}
  }
  return T(num-1)}
